新增注解型节点支持的特性

--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,6 @@
         "fakerphp/faker": "^1.13"
     },
     "autoload": {
-        "files": ["dce.php"]
+        "files": ["engine/run.php"]
     }
 }
