1.新增了类静态属性自动单例实例器 2.Model新增了correct方法能复用模型属性的校验规则校验外部值 3.其他问题修复

--- a/composer.json
+++ b/composer.json
@@ -16,13 +16,15 @@
         "swoole/ide-helper": "@dev"
     },
     "require-dev": {
-        "fakerphp/faker": "^1.13"
+        "fakerphp/faker": "^1.13",
+        "vimeo/psalm": "^4.9"
     },
     "suggest": {
         "ext-curl": "*",
         "ext-redis": "*",
         "ext-memcache": "*",
-        "ext-memcached": "*"
+        "ext-memcached": "*",
+        "vimeo/psalm": "^4.9"
     },
     "autoload": {
         "files": ["engine/run.php"]
