1.新增了任务计划工具 2.支持以命令行启动RPC服务器并支持按配置启动提供服务 3.实现了守护任务管理器以自动条件式启动守护任务 4.支持了连接池实例断开后自动重连 5.支持了多种组件日志及可配置是否开启（后续还会升级） 6.新增了批量任务按步迭代处理器 7.SwooleUtility、Structure、Utility等工具类新增了一些工具方法 8.连接建立事件支持转发到控制器处理 9.修复了分库中间件并发请求时异常可能捕获不到的问题 10.修复了原始语句构建器绑定的参数可能丢失的问题 11.解决了以命令行执行完协程任务后无法立即退出的问题 12.解决了Session::renew()后服务端异常无法将新sid传到客户端导致客户端会话失效的问题 13.调整并解决了SessionManager逻辑Bug导致会话丢失的问题 14.优化了大量细节代码及Bug修复（自行通过提交记录查看） 15.本次提交了大量不兼容旧版的更新，请慎重。且待PHP正式发布8.1后，还会进行大量不兼容更新。

--- a/composer.json
+++ b/composer.json
@@ -20,11 +20,13 @@
         "vimeo/psalm": "^4.9"
     },
     "suggest": {
+        "ext-pdo": "*",
         "ext-curl": "*",
+        "ext-posix": "*",
+        "ext-sockets": "*",
         "ext-redis": "*",
         "ext-memcache": "*",
-        "ext-memcached": "*",
-        "vimeo/psalm": "^4.9"
+        "ext-memcached": "*"
     },
     "autoload": {
         "files": ["engine/run.php"]
